# beat-byte

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Makefile  beat-byte.code-workspace  lv_conf.h  sdkconfig
components/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h
components/ui/: CMakeLists.txt  bt_device_list.c  bt_device_list.h  screens.c  screens.h  ui.c
main/: CMakeLists.txt  main.c  system_config.h
main/bluetooth/: bluetooth.h
main/gui/: gui.c  gui.h  screens.c  screens.h  ui.c  ui.h
main/peripherals/: lcd.c  lcd.h  sd_card.c  sd_card.h  uart.c  uart.h
sim/: main_sim.c
sim/hal/: hal.c  hal.h
src/: main.c
src/hal/: hal.c  hal.h
ui/: bt_device_list.c  bt_device_list.h  screens.c  ui.c
